update check win/lose

--- a/game-Dance-80-step.html
+++ b/game-Dance-80-step.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="Dance 80 step">
+
+    <meta charset="UTF-8">
     <title>Game Dance 80 steps</title>
 
    <link rel="stylesheet" href="Dance-80-steps.css">
