--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <title>Game Dance 80 steps</title>
 
-   <link rel="stylesheet" href="Dance-80-steps.css">
+   <link rel="stylesheet" href="index.css">
 </head>
 <body onload="loadPage()">
 <canvas id="gameBoard" class="canvas"></canvas>
@@ -24,4 +24,4 @@
 </body>
 </html>
 
-<script src="Dance-80-steps.js"></script>
+<script src="index.js"></script>
